--- a/huzaifa/link-building-2.html
+++ b/huzaifa/link-building-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Link Building">
 <meta name="dc.title" content="Link Building">
-<meta name="description" content="Link building is a process of (acquiring) backlinks from other websites to your own. It is an essential part of SEO, as it helps search engines understand the relevance and authority of your website. Link building can be done in various ways, such as guest posting, blogging and directory submissions.">
+<meta name="description" content="Link building is an essential part of SEO (Search Engine Optimization). It's the process of getting websites to link back to your pages, with the goal of increasing their rankings in major search engines! This can be achieved by creating quality content and engaging in outreach.">
 <meta name="keywords" content="Link Building,Link Building">
 <meta name="author" content="Link Building">
 <link rel="canonical" href="link-building-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #fdfbf7;
+ background: #fefcf8;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #0e0e0e !important;
+ color: #020202 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #040404;
+ color: #010101;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #040404 !important;
+ color: #010101 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #050505;
+ background: #131313;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Link Building"],
 "offers": [{
 "sku": "Link Building",
-"availabilityStarts": "2023-06-19 10:50:26",
+"availabilityStarts": "2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:26",
+"availabilityStarts":"2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:26",
+"availabilityStarts":"2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:26",
+"availabilityStarts":"2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:26",
+"availabilityStarts":"2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:26",
+"availabilityStarts": "2023-06-19 10:50:34",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:26",
+"availabilityStarts":"2023-06-19 10:50:34",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Link Building",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "4","ratingCount": "3",
-"reviewCount": "4"
+"ratingValue": "3","ratingCount": "4",
+"reviewCount": "3"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Link Building</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Link Building</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Link building is a process of (acquiring) backlinks from other websites to your own. It is an essential part of SEO, as it helps search engines understand the relevance and authority of your website. Link building can be done in various ways, such as guest posting, blogging and directory submissions.<br /> <br /> However, link building isn’t always easy! It requires time, patience and creativity to get high-quality links that will actually improve your rankings. You must also take into account the quality of the linking website — not all links are created equal! Some links may even hurt your rankings if they come from sites with low authority or have been obtained through shady methods like buying links or participating in link schemes. <br /> <br /> Furthermore, link building should never be done on autopilot – you need to take a strategic approach when selecting websites for link acquisition. It’s (advisable) to research the topics you want to write about and contact relevant websites with an offer for a guest post or article contribution. This way you can ensure that the link comes from an authoritative source which will help boost your rankings significantly! Wow!<br /> <br /> Overall, effective link building can be a daunting task but it’s worth it in the end if executed correctly. So don't shy away (from) trying out new strategies – there's no one-size-fits-all solution when it comes to link building!<p><a class="ILinks" href="keyword-research-2.html">Keyword Research</a></p></div>
+<div class="content1  ">Link building is an essential part of SEO (Search Engine Optimization). It's the process of getting websites to link back to your pages, with the goal of increasing their rankings in major search engines! This can be achieved by creating quality content and engaging in outreach.<br /> <br /> However, link buildin' isn't as simple as it sounds. There are many factors to consider, from keyword relevancy and authoritativeness to the trustworthiness of sources. Additionally, you must ensure that all links are legitmate and not spammy or irrelevant. To do this, it's important to stay up-to-date on industry best practices and develop relationships with webmasters.<br /> <br /> Furthermore, there is a balance between quantity and quality when it comes to link building. Too few links pointin' back to your website won't drive enough traffic; on the other hand, too many low-quality links could potentially damage your reputation! Therefore, it's important to focus on relevancy and only seek out top-notch sites that will actually provide value for visitors. <br /> <br /> To conclude, link building is a complex process that requires time and effort. However, if done correctly it can yield powerful results such as increased organic traffic and improved search engine rankings! So don't skimp on this important step in your SEO strategy - invest in success today!<p><a class="ILinks" href="content-optimization-2.html">Content Optimization</a></p></div>
 </div>
 </div>
 </div>
