--- a/huzaifa/technical-seo-2.html
+++ b/huzaifa/technical-seo-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Technical SEO">
 <meta name="dc.title" content="Technical SEO">
-<meta name="description" content="Technical SEO is an important part of the success of any website. It consists of optimizing a website's structure, content, and code for better visibility in search engines (like Google). Through technical SEO, you can make sure that all your hard work creating content and managing a website isn't wasted: if it cannot be found by search engines, nobody will ever see it!">
+<meta name="description" content="Technical SEO is a key part of any online business. It helps to make sure the website is optimised for search engine results pages (SERPs) and provides an excellent user experience. It involves various processes such as building links, optimizing meta tags, using keywords strategically, creating content with the right keywords and making sure that there are no broken links or other errors. ">
 <meta name="keywords" content="Technical SEO,Technical SEO">
 <meta name="author" content="Technical SEO">
 <link rel="canonical" href="technical-seo-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #eeece8;
+ background: #fcfaf6;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #0d0d0d !important;
+ color: #040404 !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #080808;
+ color: #060606;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #080808 !important;
+ color: #060606 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #000000;
+ background: #050505;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Technical SEO"],
 "offers": [{
 "sku": "Technical SEO",
-"availabilityStarts": "2023-06-19 10:50:28",
+"availabilityStarts": "2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:28",
+"availabilityStarts":"2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:28",
+"availabilityStarts":"2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:28",
+"availabilityStarts":"2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:28",
+"availabilityStarts":"2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:28",
+"availabilityStarts": "2023-06-19 10:50:35",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:28",
+"availabilityStarts":"2023-06-19 10:50:35",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Technical SEO",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "4","ratingCount": "3",
-"reviewCount": "5"
+"ratingValue": "3","ratingCount": "5",
+"reviewCount": "3"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Technical SEO</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Technical SEO</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Technical SEO is an important part of the success of any website. It consists of optimizing a website's structure, content, and code for better visibility in search engines (like Google). Through technical SEO, you can make sure that all your hard work creating content and managing a website isn't wasted: if it cannot be found by search engines, nobody will ever see it!<br /> <br /> However, with all its importance, there are still many misconceptions around Technical SEO. For example, some people think that just by adding keywords to their page titles they are done - whereas in fact keyword optimization is only one small piece of the puzzle. Other common misconceptions include the idea that once you've invested in technical SEO for a website, there's nothing else to do; or that it's enough to just add meta-descriptions to your pages – when actually there are much more complex components to this process. <br /> <br /> Furthermore, Technical SEO involves not only making sure all your elements are indexed properly so they show up on search engine results pages (SERPs), but also ensuring your webpages load quickly and have correct URLs and metadata set-up. This helps improve user experience as well as increasing rankings! Additionally, it involves regularly auditing your site for any errors or issues such as broken links or images which could impede performance on SERPs. <br /> <br /> To sum up; Technical SEO is an incredibly imporatant factor which should not be overlooked when developing a website. If done correctly it can help ensure optimal visibility on SERPs and therefore increase traffic to websites substantially! Therefore don't skimp on this essential aspect of web development - invest time into researching the best practices for Technical SEO and start utilizing them today! Afterall; what good is having a beautiful website if no one can find it!?<p><a class="ILinks" href="on-page-seo.html">On-Page SEO</a></p></div>
+<div class="content1  ">Technical SEO is a key part of any online business. It helps to make sure the website is optimised for search engine results pages (SERPs) and provides an excellent user experience. It involves various processes such as building links, optimizing meta tags, using keywords strategically, creating content with the right keywords and making sure that there are no broken links or other errors. <br /> <br /> However, it can be challenging to do technical SEO correctly. You need to know which techniques work best and which ones don't, as well as how to use them effectively in order to get the maximum benefit from your efforts. Additionally, you also have to keep up with changes in search engine algorithms so that your website remains competitive. <br /> <br /> What's more, many of these tasks can be time-consuming and tedious! It requires a lot of patience and attention to detail in order for everything to run smoothly. Also, some techniques may take longer than others before they start showing positive results; thus requiring regular monitoring and updates if necessary. <br /> <br /> Nevertheless, proper technical SEO is worth it! It will help improve your visibility on SERPs, attract more traffic and ultimately increase revenue for your business—all without breaking the bank! Plus, by having a good understanding of what works best for your website specifically, you'll be able to focus more on creating great content instead of worrying about the technical side too much. <br /> <br /> In conclusion, Technical SEO requires knowledge but it pays off! With an optimized website comes better rankings on SERPs which leads to more visitors who could potentially become customers down the line. Moreover, when done right it can save time and money compared to doing it wrong or not doing it at all! So investing in technical SEO should definitely be considered by any serious online business owner looking for success!<p><a class="ILinks" href="link-building-2.html">Link Building</a></p></div>
 </div>
 </div>
 </div>
