--- a/huzaifa/link-building-2.html
+++ b/huzaifa/link-building-2.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 <meta name="title" content="Link Building">
 <meta name="dc.title" content="Link Building">
-<meta name="description" content="Link building is an essential part of SEO (Search Engine Optimization). It's the process of getting websites to link back to your pages, with the goal of increasing their rankings in major search engines! This can be achieved by creating quality content and engaging in outreach.">
+<meta name="description" content="Link building is an essential part of SEO (Search Engine Optimization). It is a process for acquiring hyperlinks from other websites to your own. This helps in improving the visibility and ranking of website in search engine results pages. Link building is also known as off-page optimization as it happens outside the boundaries of the website itself!">
 <meta name="keywords" content="Link Building,Link Building">
 <meta name="author" content="Link Building">
 <link rel="canonical" href="link-building-2.html">
@@ -61,7 +61,7 @@ html {
 }
 
 .bg-brown {
- background: #fefcf8;
+ background: #eceae6;
 }
 
 .bg-primary-new {
@@ -70,7 +70,7 @@ html {
 }
 
 .bg-primary-new * {
- color: #020202 !important;
+ color: #0d0d0d !important;
 }
 
 .display-4 {
@@ -150,13 +150,13 @@ a {
 }
 
 .bg-brown * {
- color: #010101;
+ color: #020202;
 
 }
 
 .bg-brown a,
 .bg-primary-new a {
- color: #010101 !important;
+ color: #020202 !important;
  text-decoration: underline !important;
 }
 
@@ -204,7 +204,7 @@ iframe {
 }
 
 footer {
- background: #131313;
+ background: #050505;
  color: #ffffff;
 }
 
@@ -499,37 +499,37 @@ footer a {
 "teaches": ["Link Building"],
 "offers": [{
 "sku": "Link Building",
-"availabilityStarts": "2023-06-19 10:50:34",
+"availabilityStarts": "2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:34",
+"availabilityStarts":"2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:34",
+"availabilityStarts":"2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:34",
+"availabilityStarts":"2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:34",
+"availabilityStarts":"2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts": "2023-06-19 10:50:34",
+"availabilityStarts": "2023-06-19 10:50:39",
 "priceCurrency": "USD"
 },
 {
 "sku": "",
-"availabilityStarts":"2023-06-19 10:50:34",
+"availabilityStarts":"2023-06-19 10:50:39",
 "priceCurrency": "USD"
 } 
 ],
@@ -1660,8 +1660,8 @@ Q2. Why is link building important for SEO?",
 "name": "Link Building",
 "aggregateRating": {
 "@type": "AggregateRating",
-"ratingValue": "3","ratingCount": "4",
-"reviewCount": "3"
+"ratingValue": "3","ratingCount": "5",
+"reviewCount": "5"
 }
 }
 </script>
@@ -1729,7 +1729,7 @@ Q2. Why is link building important for SEO?",
 <h1 class="mbr-section-h1 text-dark mb-0 ">Link Building</h1>  
 <h2 class="mbr-section-subsection text-grey "><b>Link Building</b></h2>
 </div><div class="   col-lg-12 m-auto ">
-<div class="content1  ">Link building is an essential part of SEO (Search Engine Optimization). It's the process of getting websites to link back to your pages, with the goal of increasing their rankings in major search engines! This can be achieved by creating quality content and engaging in outreach.<br /> <br /> However, link buildin' isn't as simple as it sounds. There are many factors to consider, from keyword relevancy and authoritativeness to the trustworthiness of sources. Additionally, you must ensure that all links are legitmate and not spammy or irrelevant. To do this, it's important to stay up-to-date on industry best practices and develop relationships with webmasters.<br /> <br /> Furthermore, there is a balance between quantity and quality when it comes to link building. Too few links pointin' back to your website won't drive enough traffic; on the other hand, too many low-quality links could potentially damage your reputation! Therefore, it's important to focus on relevancy and only seek out top-notch sites that will actually provide value for visitors. <br /> <br /> To conclude, link building is a complex process that requires time and effort. However, if done correctly it can yield powerful results such as increased organic traffic and improved search engine rankings! So don't skimp on this important step in your SEO strategy - invest in success today!<p><a class="ILinks" href="content-optimization-2.html">Content Optimization</a></p></div>
+<div class="content1  ">Link building is an essential part of SEO (Search Engine Optimization). It is a process for acquiring hyperlinks from other websites to your own. This helps in improving the visibility and ranking of website in search engine results pages. Link building is also known as off-page optimization as it happens outside the boundaries of the website itself!<br /> <br /> It can be done in various ways, such as getting backlinks from directory submission sites and blog commenting. Social bookmarking, content creation and link exchange are some more effective techniques used for link building. Additionally, you can opt for guest blogging on popular sites to get quality links that drive traffic to your site. <br /> <br /> However, one should remember that not all links are created equal! After Google's Penguin update, only high-quality links count towards better rankings. So, you must focus on creating relationships with credible websites that have good reputation in the online world. Furthermore, avoid using automated tools or buying backlinks as they will land you into trouble sooner or later. <br /> <br /> Lastly, link building requires dedication and patience; it won't give desired results overnight. So keep at it consistently till you start seeing positive changes in search engine rankings and visitor count on your website. Moreover, don't forget to track progress periodically by using webmaster tools like Google Analytics and Bing webmasters toolkit!(!) <br /> <br /> Overall, if done properly link building can be very beneficial for any business website or blog wanting to increase its presence online. Moreover, it could even end up becoming a key factor contributing towards success of any digital marketing campaigns implemented by companies today. Nevertheless, always make sure to comply with guidelines set forth by major search engines while engaging with this activity!<p><a class="ILinks" href="keyword-research-2.html">Keyword Research</a></p></div>
 </div>
 </div>
 </div>
